[tool.poetry]
name = "wait-for-it"
version = "0.1.0"
description = "Repository for HackGov"
authors = ["Christian Wibisono <christian.wibisono7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.24.2"
gradio = "^2.2.3"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
